--- a/styles/text-styles.styl
+++ b/styles/text-styles.styl
@@ -20,6 +20,14 @@ text-body()
     font-size: pxToRem(22)
     line-height: (23 / 22)
 
+text-body-alt()
+  font-family: Wremena-Light
+  font-size: pxToRem(30)
+  line-height: (33 / 30)
+  +mobile()
+    font-size: pxToRem(23)
+    line-height: (24 / 23)
+
 text-highlight()
   font-family: IDEOLOGY-RegularBold, sans-serif
   font-size: pxToRem(25)
